# leveldb-shell

./: .gitmodules  CMakeLists.txt  README.md
cmake/config/: version.h.in
include/leveldb-shell/: LevelDBShell.h
src/: LevelDBShell.cc  main.cc
